test/extern/ferguson/mismatch-errors/mismatch-rvi-vi.good
mismatch-rvi-vi.chpl:4: error: extern proc does not match C declaration
